--- a/TicketTrackingSystem.MVC/Views/Project/Tickets.cshtml
+++ b/TicketTrackingSystem.MVC/Views/Project/Tickets.cshtml
@@ -62,19 +62,48 @@
     </div>
     <hr class="bg-black border-3 border-top border-dark mb-5" />
 
-        <div class="row">
+    <div class="row">
         <div class="col">
             <h2>Project @ViewData["StageName"]</h2>
         </div>
-    @if (canAdd)
-    {
+        @if (canAdd)
+        {
 
             <div class="col  text-end">
                 <button class="btn btn-primary" id="addButton">Add Ticket</button>
             </div>
-    }
+        }
+        @if (canView && user.UserType.Equals(UserType.Member))
+        {
+            <div class="col  text-end">
+                <button class="btn btn-primary" id="reinitializeBtn">My Tickets</button>
+            </div>
+        }
+
+    </div>
+
+    if (canView && user.UserType.Equals(UserType.Member))
+    {
+        <div class="row justify-content-center">
+            <div class="col">
+                <table id="memberTicketTable" class="table table-striped table-bordered " cellspacing="0">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Title</th>
+                            <th>Description</th>
+                            <th>Status</th>
+                            <th>Created At</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
         </div>
-    if (canView)
+    }
+
+
+    if (canView && user.UserType.Equals(UserType.Client))
     {
         <div class="row justify-content-center">
             <div class="col">
@@ -94,50 +123,56 @@
         </div>
 
     }
-}
-<!-- Modal -->
-<div id="myModal" class="modal fade" role="dialog">
-    <div class="modal-dialog">
 
-        <!-- Modal content-->
-        <div class="modal-content">
-            <div class="modal-header" id="modalHeader">
-                <h4 class="modal-title" id="modalTitle">Row information</h4>
+    <!-- Modal -->
+    <div id="myModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header" id="modalHeader">
+                    <h4 class="modal-title" id="modalTitle">Row information</h4>
+                </div>
+                <div class="modal-body" id="modelBody">
+                </div>
+                <div class="modal-footer" id="modal-footer-data">
+                </div>
             </div>
-            <div class="modal-body" id="modelBody">
-            </div>
-            <div class="modal-footer" id="modal-footer-data">
-            </div>
+
         </div>
-
     </div>
-</div>
-
-@section Style {
+    @section Style {
     <link href="https://cdn.datatables.net/v/bs5/dt-2.1.8/af-2.7.0/b-3.2.0/b-colvis-3.2.0/b-html5-3.2.0/datatables.min.css" rel="stylesheet">
 
-}
-@section Scripts {
+    }
+    @section Scripts {
     <script src="https://cdn.datatables.net/v/bs5/dt-2.1.8/af-2.7.0/b-3.2.0/b-colvis-3.2.0/b-html5-3.2.0/datatables.min.js"></script>
     @{
-        if (canView)
-        {
-            <script type="module" src="~/view/project/tickets/ticketTable.js"></script>
-        }
-        if (canAdd)
-        {
-            <script type="module" src="~/view/project/tickets/addTicket.js"></script>
+            if (canView)
+            {
+                <script type="module" src="~/view/project/tickets/ticketTable.js"></script>
+                <script type="module" src="~/view/project/tickets/membertickettable/membertickettable.js"></script>
 
-        }
-        if (canEdit)
-        {
-            <script type="module" src="~/view/project/tickets/editTicket.js"></script>
+            }
+            if (canAdd)
+            {
+                <script type="module" src="~/view/project/tickets/addTicket.js"></script>
 
-        }
-        if (canDelete)
-        {
+            }
+            if (canEdit)
+            {
+                <script type="module" src="~/view/project/tickets/editTicket.js"></script>
+                if (user.UserType.Equals(UserType.Member))
+                {
+                    <script type="module" src="~/view/project/tickets/membertickettable/editmemberticket.js"></script>
+                    <script type="module" src="~/view/project/tickets/membertickettable/assignmemberticket.js"></script>
+                }
+            }
+            if (canDelete)
+            {
 
+            }
         }
+
     }
-
 }
