--- a/TicketTrackingSystem.MVC/Views/Shared/_Layout.cshtml
+++ b/TicketTrackingSystem.MVC/Views/Shared/_Layout.cshtml
@@ -49,8 +49,8 @@
 <body>
     <div class="d-flex" id="wrapper">
         <!-- Sidebar-->
-        <div class="border-end bg-white" id="sidebar-wrapper">
-            <div class="sidebar-heading border-bottom bg-light">Ticket Traking System</div>
+        <div class="border-end " id="sidebar-wrapper">
+            <div class="sidebar-heading border-bottom pb-4">Ticket Traking System</div>
             <div class="list-group list-group-flush">
                 @{
                     if (viewRole)
@@ -94,12 +94,17 @@
         <!-- Page content wrapper-->
         <div id="page-content-wrapper">
             <!-- Top navigation-->
-            <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
+            <nav class="navbar navbar-expand-lg border-bottom">
                 <div class="container-fluid">
                     <button class="btn btn-primary" id="sidebarToggle">Toggle Menu</button>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
+                            <li>
+                                <button id="toggleThemeBtn" class="btn btn-outline-secondary me-2">
+                                    <i class="bi bi-sun"></i> Light Mode
+                                </button>
+                            </li>
                             <li>
                                 <partial name="_LoginPartial" />
                             </li>
@@ -109,7 +114,7 @@
             </nav>
             <!-- Page content-->
             <div class="container py-3">
-                <h1 class="mt-4">@ViewData["Title"] Page</h1>
+                <h1 class="mt-4 mb-5">@ViewData["Title"] Page</h1>
                 @RenderBody()
             </div>
         </div>
@@ -118,6 +123,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     @* <script src="~/bootstrap/js/bootstrap.bundle.min.js"></script> *@
+    <script src="~/js/bottomscript.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
