--- a/TicketTrackingSystem.MVC/Views/Shared/_LoginPartial.cshtml
+++ b/TicketTrackingSystem.MVC/Views/Shared/_LoginPartial.cshtml
@@ -8,23 +8,23 @@
     @if (SignInService.IsSignedIn(User))
     {
         <li class="nav-item">
-            <a class="nav-link text-dark" title="Manage">
+            <a class="nav-link" title="Manage">
                 Hello @User.Identity?.Name!
             </a>
         </li>
         <li class="nav-item">
             <form class="form-inline" asp-controller="Account" asp-action="Logout" method="post">
-                <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+                <button type="submit" class="nav-link btn btn-link">Logout</button>
             </form>
         </li>
     }
     else
     {
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-controller="Account"  asp-action="Register">Register</a>
+            <a class="nav-link" asp-controller="Account"  asp-action="Register">Register</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-controller="Account" asp-action="Login">Login</a>
+            <a class="nav-link" asp-controller="Account" asp-action="Login">Login</a>
         </li>
     }
 </ul>
